--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,1 +1,17 @@
+/* Hero Style */
+.hero {
+  background-image: url('./assets/images/Background.jpg');
+  background-size: cover;
+  background-position: center center;
+  min-height: 80vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 
+.hero h1 {
+  color: white;
+  border: 2px solid white;
+  padding: 0.75em;
+}
