--- a/client/src/App.css
+++ b/client/src/App.css
@@ -33,11 +33,44 @@
   letter-spacing: 0.2rem;
 }
 
+.hero p .text-plan {
+  color: rgb(11, 186, 46);
+  text-shadow: 1px 1px 1px rgb(5, 104, 25);
+}
+
+.hero p .text-design {
+  color: #fff;
+  text-shadow: 1px 1px 1px #e4dcdc;
+}
+
+.hero p .text-build {
+  color: rgb(227, 37, 37);
+  text-shadow: 1px 1px 1px rgb(116, 17, 17);
+}
+
 @media (max-width: 360px) {
+  .hero {
+    padding: 10rem;
+    line-height: 1.5rem;
+  }
   .hero h1 {
     font-size: 1.5rem;
+    text-align: center;
+    padding: 0.75rem;
+    min-width: 360px;
+    font-weight: 700;
+    text-shadow: 1px 1px 1px #000;
   }
-  /* .hero p {
-    font-size: 1.5rem;
-  } */
+  .hero p {
+    font-size: 1.3rem;
+    padding: 0.75rem;
+    min-width: 360px;
+    text-align: center;
+  }
+  .hero a {
+    font-size: 0.75rem;
+    padding: 0.75rem;
+    min-width: 360px;
+    text-align: center;
+  }
 }
