--- a/client/src/App.css
+++ b/client/src/App.css
@@ -48,7 +48,7 @@
   text-shadow: 1px 1px 1px rgb(116, 17, 17);
 }
 
-@media (max-width: 360px) {
+@media screen and (max-width: 360px) {
   .hero {
     padding: 10rem;
     line-height: 1.5rem;
@@ -72,5 +72,25 @@
     padding: 0.75rem;
     min-width: 360px;
     text-align: center;
+  }
+}
+
+/* Services Style */
+.services {
+  padding: 5em;
+}
+
+.services h2 {
+  color: rgba(21, 64, 5, 1);
+  text-align: center;
+}
+
+.underline-do {
+  text-decoration: underline rgb(227, 37, 37);
+}
+
+@media screen and (max-width: 420px) {
+  .services {
+    padding: 2em;
   }
 }
