--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,6 @@
 /* Hero Style */
 .hero {
-  background-image: url('./assets/images/Background1.png');
+  background-image: url('./assets/images/background-hero1.png');
   background-size: cover;
   background-position: center center;
   min-height: 80vh;
@@ -29,23 +29,24 @@
 
 .hero a {
   color: rgb(72, 221, 18);
+  font-size: 1.2rem;
   text-shadow: 1px 1px 1px #000;
   letter-spacing: 0.2rem;
 }
 
 .hero p .text-plan {
   color: rgb(11, 186, 46);
-  text-shadow: 1px 1px 1px rgb(5, 104, 25);
+  text-shadow: 2px 2px 2px rgb(0, 0, 0);
 }
 
 .hero p .text-design {
   color: #fff;
-  text-shadow: 1px 1px 1px #e4dcdc;
+  text-shadow: 2px 2px 2px #000000;
 }
 
 .hero p .text-build {
   color: rgb(227, 37, 37);
-  text-shadow: 1px 1px 1px rgb(116, 17, 17);
+  text-shadow: 2px 2px 2px rgb(0, 0, 0);
 }
 
 @media screen and (max-width: 360px) {
@@ -84,10 +85,7 @@
   color: rgba(21, 64, 5, 1);
   text-align: center;
   font-size: 1.5rem;
-}
-
-.underline-do {
-  text-decoration: underline rgb(227, 37, 37);
+  text-decoration: underline red;
 }
 
 @media screen and (max-width: 420px) {
