--- a/client/src/App.css
+++ b/client/src/App.css
@@ -79,23 +79,28 @@
 
 /* Services Style */
 .services {
-  padding: 5em;
+  padding: 4em;
 }
 
-.services .services-p {
-  color: rgba(220, 53, 69, 1);
+.services .services-h2 {
   text-align: center;
-  font-size: 1.5rem;
+  font-size: 1.75rem;
+}
+
+.text-span-green {
+  background: rgba(25, 135, 84, 1);
 }
 
 @media screen and (max-width: 420px) {
   .services {
-    padding: 2em;
+    padding: 1em;
+    min-width: 100%;
   }
 }
 
 /* Projects Style */
 .projects {
+  min-width: 100%;
   padding: 5em;
   background: rgb(255, 255, 255);
   background: linear-gradient(
@@ -115,5 +120,49 @@
 @media screen and (max-width: 420px) {
   .projects {
     padding: 1em;
+  }
+}
+
+/* About us style */
+.about {
+  padding: 10em;
+  min-width: 100%;
+}
+
+.about-text {
+  padding: 3rem;
+  line-height: 2.2rem;
+  background: rgb(255, 255, 255);
+  background: linear-gradient(
+    0deg,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(25, 135, 84, 1) 33%
+  );
+  border-radius: 25px;
+}
+
+.about-text h2 {
+  color: #fff;
+}
+
+.about-text p {
+  color: #fff;
+}
+
+@media screen and (max-width: 912px) {
+  .about {
+    padding: 2em;
+    background: rgb(255, 255, 255);
+    background: linear-gradient(
+      0deg,
+      rgba(255, 255, 255, 1) 0%,
+      rgba(25, 135, 84, 1) 33%
+    );
+    min-width: 100%;
+  }
+  .about-text {
+    line-height: 1.5rem;
+    padding: 0.5rem;
+    background: none;
   }
 }
