--- a/client/src/App.css
+++ b/client/src/App.css
@@ -132,7 +132,7 @@
   background: linear-gradient(
     0deg,
     rgba(255, 255, 255, 1) 0%,
-    rgba(25, 135, 84, 1) 33%
+    rgba(25, 135, 84, 0.729) 33%
   );
   border-radius: 25px;
 }
@@ -152,7 +152,7 @@
     background: linear-gradient(
       0deg,
       rgba(255, 255, 255, 1) 0%,
-      rgba(25, 135, 84, 1) 33%
+      rgb(25, 135, 84) 33%
     );
     min-width: 100%;
   }
