--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,11 @@
+:root {
+  --white: #fff;
+  --green: #198754;
+  --red: #dc3545;
+  --black: #000;
+}
+
+/* Hero Style */
 .hero {
   background-image: url('./assets/images/background-hero4.png');
   background-position: center center;
@@ -8,13 +16,41 @@
   justify-content: center;
   align-items: center;
   min-height: 80vh;
-  line-height: 2rem;
+  line-height: 3rem;
 }
 
 .hero h1 {
+  color: var(--white);
+  text-shadow: 2px 2px 1px var(--black);
   text-align: center;
   font-size: 2.5rem;
+  font-weight: 600;
   max-width: 100%;
+}
+
+.hero p {
+  font-size: 1.5rem;
+  font-weight: 500;
+}
+
+.hero .text-plan {
+  color: var(--green);
+  text-shadow: 2px 2px 1px var(--black);
+}
+
+.hero .text-design {
+  color: var(--white);
+  text-shadow: 2px 2px 1px var(--black);
+}
+
+.hero .text-build {
+  color: var(--red);
+  text-shadow: 2px 2px 1px var(--black);
+}
+
+.hero .hero-dream {
+  color: var(--white);
+  text-shadow: 2px 2px 1px var(--black);
 }
 
 /* Services Style */
