--- a/client/src/App.css
+++ b/client/src/App.css
@@ -15,7 +15,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  min-height: 80vh;
+  min-height: 70vh;
   line-height: 3rem;
 }
 
@@ -25,12 +25,14 @@
   text-align: center;
   font-size: 2.5rem;
   font-weight: 600;
-  max-width: 100%;
+  min-width: 100%;
 }
 
 .hero p {
-  font-size: 1.5rem;
+  font-size: 1.8rem;
+  text-align: center;
   font-weight: 500;
+  min-width: 100%;
 }
 
 .hero .text-plan {
