--- a/client/src/App.css
+++ b/client/src/App.css
@@ -126,44 +126,60 @@
 
 /* About us style */
 .about {
-  padding: 10em;
-  min-width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 3em;
+  gap: 1rem;
+  background-color: var(--green);
 }
 
-.about-text {
-  padding: 3rem;
-  line-height: 2.2rem;
-  background: rgb(255, 255, 255);
-  background: linear-gradient(
-    0deg,
-    rgba(255, 255, 255, 1) 0%,
-    rgb(25, 135, 84) 33%
-  );
-  border-radius: 25px;
+.about-container-grid {
+  padding: 1em;
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 2rem;
+  place-items: center;
 }
 
-.about-text h2 {
-  color: #fff;
+.about h2 {
+  margin-top: 1em;
+  color: var(--white);
+  font-size: 1.5rem;
+  text-align: center;
 }
 
-.about-text p {
-  color: #fff;
+.about p {
+  color: var(--white);
+  max-width: 500px;
 }
 
-@media screen and (max-width: 912px) {
-  .about {
-    padding: 2em;
-    background: rgb(255, 255, 255);
-    background: linear-gradient(
-      0deg,
-      rgba(255, 255, 255, 1) 0%,
-      rgb(25, 135, 84) 33%
-    );
-    min-width: 100%;
+.about-btn {
+  border: none;
+  border-radius: 12px;
+  min-width: 150px;
+  margin-top: 1em;
+  padding: 0.5em;
+  background-color: var(--red);
+  color: var(--white);
+}
+
+@media (min-width: 1200px) {
+  .about-container-grid {
+    padding: 3em;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    place-items: start;
+    gap: 2rem;
   }
-  .about-text {
-    line-height: 1.5rem;
-    padding: 0.5rem;
-    background: none;
+
+  .about h2 {
+    font-size: 1.75rem;
+  }
+
+  .about p {
+    font-size: 1.2rem;
+    line-height: 2rem;
   }
 }
