Style button components for hero section

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -16,6 +16,9 @@
   justify-content: center;
   align-items: center;
   min-height: 70vh;
+}
+
+.hero-text-content {
   line-height: 3rem;
 }
 
@@ -57,15 +60,17 @@
 
 .hero-btn {
   border: none;
-  border-radius: 20px;
-  min-width: 150px;
+  border-radius: 12px;
   margin-top: 1em;
   background-color: var(--red);
   color: var(--white);
+  text-align: center;
+  text-decoration: none;
+  padding: 0.5em 1em;
 }
 
 @media (min-width: 768px) {
-  .hero {
+  .hero-text-content {
     line-height: 4rem;
   }
 
