Use button component instead of react-bootstrap button on about section

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -155,16 +155,7 @@
 .about p {
   color: var(--white);
   max-width: 500px;
-}
-
-.about-btn {
-  border: none;
-  border-radius: 12px;
-  min-width: 150px;
-  margin-top: 1em;
-  padding: 0.5em;
-  background-color: var(--red);
-  color: var(--white);
+  margin-bottom: 1em;
 }
 
 @media (min-width: 1200px) {
