--- a/client/src/App.css
+++ b/client/src/App.css
@@ -457,3 +457,33 @@
     line-height: 2rem;
   }
 }
+
+/* CONTACT PAGE STYLE */
+
+/* Contact Hero Section Style */
+.contact-hero {
+  position: relative;
+  isolation: isolate;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 60vh;
+}
+
+.contact-hero::after {
+  content: '';
+  background-image: url('./assets/images/about-hero-background.jpg');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: absolute;
+  z-index: -1;
+  inset: 0;
+  transform: skewY(-5deg);
+}
+
+.contact-hero h2 {
+  color: var(--white);
+  text-shadow: 2px 2px 1px var(--black);
+}
