Style contact info section

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -188,6 +188,8 @@
 .contact {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   margin-top: 3em;
 }
 
@@ -205,6 +207,7 @@
   display: grid;
   grid-template-columns: 1fr;
   gap: 2rem;
+  place-items: center;
 }
 
 @media (min-width: 900px) {
