Style project hero section header on project page

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -514,3 +514,8 @@
   inset: 0;
   transform: skewY(-5deg);
 }
+
+.project-hero h2 {
+  color: var(--white);
+  text-shadow: 2px 2px 1px var(--black);
+}
