Update ContactUs hero background image

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -475,7 +475,7 @@
 
 .contact-hero::after {
   content: '';
-  background-image: url('./assets/images/about-hero-background.jpg');
+  background-image: url('./assets/images/contact-us1.png');
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
