Update image on project info

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -549,6 +549,10 @@
   gap: 1rem;
 }
 
+.project-info-col img {
+  max-height: 250px;
+}
+
 .project-info-text {
   color: var(--green);
   max-width: 400px;
