--- a/client/src/App.css
+++ b/client/src/App.css
@@ -577,12 +577,23 @@
 
 /* Update Project Info style */
 .project-form-container {
-  padding: 3em;
+  /* padding: 0.5em; */
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  min-height: 100vh;
+}
+
+.project-form-container h2 {
+  color: var(--green);
+  margin-bottom: 1em;
+}
+
+.update-project-form {
   border: 2px solid var(--green);
+  width: 75%;
+  padding: 1em;
 }
 
 /* AUTH PAGE STYLE */
