--- a/client/src/App.css
+++ b/client/src/App.css
@@ -596,6 +596,13 @@
   padding: 1em;
 }
 
+.update-project-button-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  gap: 0.75rem;
+}
+
 /* AUTH PAGE STYLE */
 .auth-container {
   position: relative;
