Style: Update all the button hover style to have darker red

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -92,6 +92,10 @@
   padding: 0.5em 1em;
 }
 
+.hero-btn:hover {
+  background-color: #750410;
+}
+
 @media (min-width: 768px) {
   .hero-text-content {
     line-height: 4rem;
