--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,7 +7,8 @@
   box-sizing: border-box;
 }
 
-Remove default margin body,
+/* Remove default margin  */
+body,
 h1,
 h2,
 h3,
@@ -18,6 +19,11 @@ blockquote,
 dl,
 dd {
   margin-block-end: 0;
+}
+
+/* For Readability */
+p {
+  letter-spacing: 0.1rem;
 }
 
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
